Fix link to SPEC history (#590)
Co-authored-by: Jarrod Millman <jarrod.millman@gmail.com>

--- a/layouts/partials/specs/spec_meta.html
+++ b/layouts/partials/specs/spec_meta.html
@@ -16,7 +16,7 @@
       {{- else if eq $attr "date" }}
         {{ $val = $val.Format "2006-01-02" }}
       {{- else if (eq $attr "history") }}
-        {{ $path := index (split $page.File "specs/") 1 }}
+        {{ $path := index (split $page.Path "specs/") 1 }}
         {{ $link := printf "https://github.com/scientific-python/specs/commits/main/%s" $path }}
         {{ $val = printf "<a href=\"%s\">%s</a>" $link $link }}
       {{- end -}}
