--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -7,7 +7,7 @@
         <div class="columns">
             <div class="column is-centered-tablet-portrait">
                 <h1 class="title section-title">{{ .Title }}</h1>
-                <h5 class="subtitle is-5 is-muted">{{ .Params.Subtitle }}</h5>
+                <h5 class="subtitle">{{ .Params.Subtitle }}</h5>
                 <div class="divider"></div>
             </div>
         </div>
