--- a/layouts/summits/section.html
+++ b/layouts/summits/section.html
@@ -5,7 +5,7 @@
     {{ partial "breadcrumbs.html" . }}
     <h1>{{ .Title }}</h1>
     {{ if .Params.Subtitle }}
-    <h5 class="subtitle is-5 is-muted">{{ .Params.Subtitle }}</h5>
+    <h5 class="subtitle">{{ .Params.Subtitle }}</h5>
     {{ end }}
     {{ .Content }}
     <br/>
