Make SPEC draft status explicit
Now need to specify `is-draft: true` in template, for it to render as draft.

--- a/layouts/partials/specs/spec_meta.html
+++ b/layouts/partials/specs/spec_meta.html
@@ -27,8 +27,8 @@
 {{- end -}}
 {{- $specMetaBody := partial "_elements/field-list.html" (dict "entries" $fieldList) -}}
 
-{{/* Add warning if SPEC not endorsed */}}
-{{- if not $endorsed }}
+{{/* Add draft warning */}}
+{{- if (index $.Params "is-draft") }}
   {{- $title := "attention" -}}
   {{- $body := "This is a draft document." -}}
   {{- $admonition := partial "_elements/admonition.html" (dict "title" $title "body" $body) -}}
