--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -16,18 +16,17 @@
           </a>
         </td>
         <td class="spec__status">
-          {{- $endorsed_by := index .Params "endorsed-by" }}
-          {{- $N := len (or $endorsed_by "") }}
-          {{- if ge $N 2 }}
-            {{- range $idx, $el := $endorsed_by  }}
-              {{ $project_page := $.GetPage (printf "core-projects/%s" $el) }}
-              {{ $url := $project_page.RelPermalink }}
-              <a href="{{ $url }}">
-                <img title="{{ $project_page.Title }}" src="{{ $project_page.Params.avatar }}" class="icon"/>
-              </a>
-            {{ end }}
+          {{ if (index .Params "is-draft") }}
+          DRAFT
           {{ else }}
-            DRAFT
+          {{- $endorsed_by := index .Params "endorsed-by" }}
+          {{- range $idx, $el := $endorsed_by  }}
+          {{ $project_page := $.GetPage (printf "core-projects/%s" $el) }}
+          {{ $url := $project_page.RelPermalink }}
+          <a href="{{ $url }}">
+            <img title="{{ $project_page.Title }}" src="{{ $project_page.Params.avatar }}" class="icon"/>
+          </a>
+          {{ end }}
           {{ end -}}
         </td>
       </tr>
