--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,6 +22,33 @@ table.spec__table thead {
   text-decoration: none;
 }
 
+.spec__table {
+  border-spacing: 0;
+}
+
+tr.spec td {
+  padding-top: 0.35rem;
+  padding-bottom: 0.45rem;
+  padding-left: 0.5rem;
+}
+
+td.spec__title a {
+  display: inline-block;
+  width: 100%;
+}
+
+tr.spec img {
+  vertical-align: middle;
+}
+
+tr.spec.alt-row {
+  background-color: #efefef;
+}
+
+tr.spec:hover {
+  background-color: #e0e0e0;
+}
+
 .calendar-list .calendar {
   padding-bottom: 1rem;
 }
