--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -20,12 +20,14 @@
             DRAFT
           {{ else }}
             {{- $endorsed_by := index .Params "endorsed-by" }}
-            {{- range $idx, $el := $endorsed_by  }}
-              {{ $project_page := $.GetPage (printf "core-projects/%s" $el) }}
-              {{ $url := $project_page.RelPermalink }}
-              <a href="{{ $url }}">
-                <img title="{{ $project_page.Title }}" src="{{ $project_page.Params.avatar }}" class="icon"/>
-              </a>
+            {{ with $endorsed_by }}
+              {{- range $idx, $el := sort $endorsed_by }}
+                {{ $project_page := $.GetPage (printf "core-projects/%s" $el) }}
+                {{ $url := $project_page.RelPermalink }}
+                <a href="{{ $url }}">
+                  <img title="{{ $project_page.Title }}" src="{{ $project_page.Params.avatar }}" class="icon"/>
+                </a>
+              {{- end }}
             {{- end }}
           {{- end }}
         </td>
