Add comments to SPECs (#591)
* Add comments to SPECs

* Sync with blog.sp.org version

* Sync with blog.sp.org version

* Show comments in correct location

* Divide comments from rest of SPEC

--- a/layouts/specs/single.html
+++ b/layouts/specs/single.html
@@ -11,7 +11,8 @@
     {{- end }}
 
     <div class="article-content">
-        {{ .Content }}
+      {{ .Content }}
+      {{ partial "specs/comments.html" . }}
     </div>
   </div>
   {{ partial "shortcuts.html" . }}
