--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -57,7 +57,7 @@
             var calendar = new FullCalendar.Calendar(community_calendar, {
               aspectRatio: 1,
               timeZone: 'local',
-              initialView: 'timeGridWeek', // 'dayGridMonth',
+              initialView: 'timeGridWeek',
               headerToolbar: {
                 left: "prev,next today",
                 center: "title",
